--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -1,9 +1,11 @@
 .logo {
+  transition: all 0.3s;
   display: none;
 
   @include media-breakpoint-up(sm) {
     display: block;
     width: 100px;
+    visibility: hidden;
   }
 
   img {
@@ -15,6 +17,10 @@
     display: block;
     width: 100%;
     height: 100%;
+  }
+
+  &.is-sticky {
+    visibility: visible;
   }
 }
 
@@ -36,5 +42,35 @@
     display: block;
     width: 100%;
     height: 100%;
+  }
+}
+
+.logo-intro  {
+  display: none;
+
+  @media screen and (min-width: $bp-md) {
+    display: block;
+    transition: visibility 0s, opacity 0.3s linear;
+    visibility: visible;
+    opacity: 1;
+    width: 200px;
+
+    &.is-sticky {
+      transition: visibility 0s, opacity 0.3s linear;
+      visibility: hidden;
+      opacity: 0;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+
   }
 }
