Add teaser-box scss.
KEPTN-9719

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -43,6 +43,7 @@
 @import 'components/sections';
 @import 'components/sidebar';
 @import 'components/teaser';
+@import 'components/teaser-box';
 @import 'components/toc';
 @import 'components/toolbar';
 
