--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -48,6 +48,16 @@
     }
   }
 
+  .intro::after {
+    background-image: url('/images/home/hero/waves-intro.jpg');
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+  }
+
   // Usage
   .usage {
     .usage-item img {
