Update hover for sticky header.
KEPTN-9719

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -73,12 +73,20 @@
         &:not(.button) {
           color: $textColor;
         }
+
+        &:hover {
+          color: $primary-home-900;
+        }
       }
 
       .button {
         margin-left: 24px;
         background-color: $primary-home-900;
         color: $white !important;
+      }
+
+      .button:hover {
+        background-color: $dark-blue-home-900;
       }
     }
   }
