--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -41,6 +41,7 @@ $greyscale-home-500: #2222224d;
 $greyscale-home-300: #22222233;
 $greyscale-home-200: #2222221a;
 $greyscale-home-100: #2222220d;
+$textColor-home-900: #262626ff;
 
 
 // Links
