--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -1,2 +1,88 @@
 .teaser-box {
+  h2 {
+    color: $textColor-home-900;
+    font-family: OpenSans-Bold;
+    font-size: 37.32px;
+    font-weight: $font-weight-bold;
+    line-height: 44.78px;
+  }
+
+  h4 {
+    color: $secondary-home-900;
+    font-family: Courier-Bold;
+    font-size: 15px;
+    font-weight: $font-weight-bold;
+    line-height: 24px;
+  }
+
+  p {
+    color: $textColor-home-900;
+    font-family: OpenSans-Regular;
+    font-size: 21.6px;
+    font-weight: $font-weight-normal;
+    line-height: 34.56px;
+  }
+
+  ul {
+    li {
+      font-family: OpenSans-Regular;
+      font-size: 18px;
+      font-weight: $font-weight-normal;
+      line-height: 34.56px;
+      color: $textColor-home-900;
+
+      &::before {
+        content: url('/images/home/icon-arrow-list.svg');
+        position: relative;
+        top: 5px;
+        padding-right: 12px;
+      }
+
+      &::marker {
+        content: '';
+      }
+    }
+  }
+
+  .button {
+    padding: 10px 24px;
+    border-radius: 24px;
+    box-shadow: 0 5px 10px 0 rgba(3, 12, 18, 0.15);
+    font-size: 0.9rem;
+    font-weight: $font-weight-bold;
+    text-decoration: none !important;
+
+    &:hover {
+    }
+
+    &.filledGreen {
+      background-color: $secondary-home-900;
+      color: $white;
+    }
+
+    &.filledWhite {
+      background-color: $white;
+      color: $primary-home-900;
+
+      .icon {
+        &--hover {
+          display: none;
+        }
+      }
+    }
+
+    &.outlinedBlue {
+      border: 2px solid $primary-home-900;
+      color: $primary-home-900;
+    }
+
+    &.outlinedWhite {
+      border: 2px solid $white;
+      color: $white;
+    }
+  }
+}
+
+.teaser-box-intro {
+
 }
