Update button font-weights and teaser margins.
KEPTN-9719

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -53,6 +53,7 @@
         margin-left: 24px;
         background-color: $white;
         color: $primary-home-900 !important;
+        font-weight: $font-weight-semibold;
       }
 
       .main-menu ul li a {
