--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -1,34 +1,29 @@
 .teaser-box {
   h2 {
     color: $textColor-home-900;
-    font-family: OpenSans-Bold;
-    font-size: 37.32px;
     font-weight: $font-weight-bold;
-    line-height: 44.78px;
   }
 
   h4 {
     color: $secondary-home-900;
     font-family: Courier-Bold;
-    font-size: 15px;
+    font-size: $font-size--primary;
     font-weight: $font-weight-bold;
-    line-height: 24px;
+    margin-bottom: 6px;
   }
 
   p {
     color: $textColor-home-900;
-    font-family: OpenSans-Regular;
-    font-size: 21.6px;
     font-weight: $font-weight-normal;
-    line-height: 34.56px;
+
+    &:last-of-type {
+      margin-bottom: 16px !important;
+    }
   }
 
   ul {
     li {
-      font-family: OpenSans-Regular;
-      font-size: 18px;
       font-weight: $font-weight-normal;
-      line-height: 34.56px;
       color: $textColor-home-900;
 
       &::before {
@@ -42,18 +37,15 @@
         content: '';
       }
     }
+    margin-bottom: 16px !important;
   }
 
   .button {
     padding: 10px 24px;
     border-radius: 24px;
     box-shadow: 0 5px 10px 0 rgba(3, 12, 18, 0.15);
-    font-size: 0.9rem;
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-semibold;
     text-decoration: none !important;
-
-    &:hover {
-    }
 
     &.filledGreen {
       background-color: $secondary-home-900;
