--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -21,6 +21,7 @@
 
   &.is-sticky {
     visibility: visible;
+    padding-bottom: 16px;
   }
 }
 
@@ -54,6 +55,7 @@
     visibility: visible;
     opacity: 1;
     width: 200px;
+    margin-bottom: 80px;
 
     &.is-sticky {
       transition: visibility 0s, opacity 0.3s linear;
