--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -1,7 +1,20 @@
 .teaser-box {
+  h1 {
+    font-weight: $font-weight-bold !important;
+    font-size: $font-size--xl !important;
+    font-family: $font-family-base !important;
+    padding-right: 32px;
+  }
+
   h2 {
     color: $textColor-home-900;
     font-weight: $font-weight-bold;
+  }
+
+  h3 {
+    font-weight: $font-weight-semibold;
+    font-size: 1.35rem !important;
+    margin-top: 12px;
   }
 
   h4 {
@@ -15,6 +28,7 @@
   p {
     color: $textColor-home-900;
     font-weight: $font-weight-normal;
+    font-size: 1.35rem;
 
     &:last-of-type {
       margin-bottom: 16px !important;
@@ -23,6 +37,10 @@
 
   ul {
     li {
+      font-size: 1.35rem;
+      @media screen and (min-width: $bp-md) {
+        font-size: 1.35rem;
+      }
       font-weight: $font-weight-normal;
       color: $textColor-home-900;
 
@@ -41,7 +59,7 @@
   }
 
   .button {
-    padding: 10px 24px;
+    padding: 14px 21px;
     border-radius: 24px;
     box-shadow: 0 5px 10px 0 rgba(3, 12, 18, 0.15);
     font-weight: $font-weight-semibold;
@@ -73,8 +91,14 @@
       color: $white;
     }
   }
-}
 
-.teaser-box-intro {
+  &.white {
+    h1, h2, h3, li,  p {
+      color: $white !important;
+    }
 
+    li, p {
+      font-size: $font-size--s !important;
+    }
+  }
 }
