--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -16,11 +16,11 @@
   // Intro
   .intro {
     @media screen and (min-width: $bp-md) {
-      background: url('/images/home/hero/background-hero-lines.svg'), $textBrandColor;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 0 30%;
+
     }
+
+    background: url('/images/home/hero/background-hero-lines.svg'), $primary-home-900;
+    background-size: 100% auto;
 
     h1 {
       color: $primary;
@@ -47,11 +47,15 @@
       margin-left: 8px;
     }
 
-    &::after {
-      background-image: url('/images/home/hero/waves-intro.jpg');
-      position: relative;
+    &:after {
+      display: none;
+      content: "";
+      height: 1166px;
+      top: 6.6%;
+      position: absolute;
+      background: url('/images/home/hero/waves-intro.jpg');
       width: 100%;
-      z-index: 5000;
+      z-index: 500;
     }
   }
 
