--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -104,6 +104,9 @@ $font-size--m               : 1.65rem;
 $font-size--l               : 1.85rem;
 $font-size--xl              : 2rem;
 $font-size--xxl             : 2.5rem;
+//Font Home
+$font-size-m-home           : 1.35rem;
+$font-size-xxl-home         : 2.313rem;
 
 // Responsive breakpoints, corresponds to the BootStrap V4 ones
 $bp-xs: 0;
