Add intro image
KEPTN-9719

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -62,6 +62,12 @@ page-home
           </a>
         </div>
       </div>
+      <div class="col-12 pt-5 teaser-box">
+        <picture>
+          <source media="(min-width: 768px)" srcset="/images/home/hero/graphic-hero.svg">
+          <img src="/images/home/hero/keptn-logo-white.svg">
+        </picture>
+      </div>
     </div>
   </div>
 </div>
