--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -9,14 +9,16 @@
 
   h2 {
     color: $textColor-home-900;
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-bold !important;
     font-size: $font-size-xxl-home;
+    margin-bottom: 24px !important;
   }
 
   h3 {
     font-weight: $font-weight-semibold;
     font-size: $font-size-m-home !important;
     margin-top: 12px;
+    margin-bottom: 12px;
   }
 
   h4 {
@@ -24,16 +26,17 @@
     font-family: Courier-Bold;
     font-size: $font-size--primary;
     font-weight: $font-weight-bold;
-    margin-bottom: 6px;
+    margin-bottom: 8px;
   }
 
   p {
     color: $textColor-home-900;
     font-weight: $font-weight-normal;
-    font-size: $font-size-m-home;
+    font-size: $font-size-m-home !important;
+
 
     &:last-of-type {
-      margin-bottom: 16px !important;
+      margin-bottom: 24px !important;
     }
   }
 
@@ -61,10 +64,10 @@
   }
 
   .button {
-    padding: 14px 21px;
+    padding: 14px 24px;
     border-radius: 24px;
     box-shadow: 0 5px 10px 0 rgba(3, 12, 18, 0.15);
-    font-weight: $font-weight-semibold;
+    font-weight: $font-weight-bold;
     text-decoration: none !important;
 
     &.filledGreen {
@@ -92,6 +95,10 @@
       border: 2px solid $white;
       color: $white;
     }
+  }
+
+  .img {
+    padding-top: 32px;
   }
 
   &.white {
