Add color for waves1.
KEPTN-9719

--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -26,6 +26,7 @@ $primary-home-900: #006bb8ff;
 $primary-home-700: #006bb880;
 $primary-home-500: #006bb84d;
 $primary-home-100: #006bb80d;
+$primary-home-050: #d8e6f4ff;
 $secondary-home-900: #14ba5aff;
 $secondary-home-700: #14ba5a80;
 $secondary-home-500: #14ba5a4d;
