--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -48,10 +48,10 @@
     }
 
     &:after {
-      display: none;
+
       content: "";
       height: 1166px;
-      top: 6.6%;
+      top: 6%;
       position: absolute;
       background: url('/images/home/hero/waves-intro.jpg');
       width: 100%;
@@ -61,6 +61,7 @@
 
   // Usage
   .usage {
+    background: $primary-home-050;
     .usage-item img {
       width: 48px;
       height: 48px;
