--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,8 +33,8 @@ page-home
 <div class="intro">
   {{/* announcement */}}
 {{ partial "announcement.html" . }}
-  <div class="container pt-5 pb-5">
-    <div class="row pt-md-5 pb-md-5">
+  <div class="container pt-5">
+    <div class="row pt-md-5">
       <div class="col-12 teaser-box">
         <div class="logo-intro">
           <a href="/">
@@ -51,7 +51,7 @@ page-home
         {{ with .Site.GetPage "section" "home/intro" }}
           {{ .Content }}
         {{ end }}
-        <div class="d-flex pt-2">
+        <div class="d-flex">
           <a class="button filledGreen mr-4" href="https://github.com/keptn/keptn">
             Start now
           </a>
@@ -74,30 +74,30 @@ page-home
 
 {{/* Usage */}}
 <div class="usage">
-  <div class="container pt-4 pb-3 pb-md-4">
-    <div class="row pt-md-2 pb-md-4">
-      <div class="col-12 pb-2">
-        {{ with .Site.GetPage "section" "home/usage-top" }}
+  <div class="container pb-5">
+    <div class="row">
+      <div class="col-12 col-md-8 teaser-box">
+        {{ with .Site.GetPage "section" "home/usage" }}
           {{ .Content }}
         {{ end }}
-      </div>
 
-      <div class="usage-item col-12 col-md-4 d-flex flex-row">
-        {{ with .Site.GetPage "section" "home/usage-left" }}
-          {{ .Content }}
-        {{ end }}
+        <div class="d-flex">
+          <a class="button filledGreen mr-3" href="https://github.com/keptn/keptn">
+            Start now
+          </a>
+          <a class="button outlinedBlue mr-3" href="https://github.com/keptn/keptn">
+            See it in action
+          </a>
+          <a class="button outlinedBlue mr-3" href="https://github.com/keptn/keptn">
+            Read docs
+          </a>
+        </div>
       </div>
-
-      <div class="usage-item col-12 col-md-4 d-flex flex-row">
-        {{ with .Site.GetPage "section" "home/usage-middle" }}
-          {{ .Content }}
-        {{ end }}
-      </div>
-
-      <div class="usage-item col-12 col-md-4 d-flex flex-row">
-        {{ with .Site.GetPage "section" "home/usage-right" }}
-          {{ .Content }}
-        {{ end }}
+      <div class="col-12 pt-4 pb-3 teaser-box">
+        <picture>
+          <source media="(min-width: 768px)" srcset="/images/home/use-cases/graphic-use-case-01.svg">
+          <img src="/images/home/hero/keptn-logo-white.svg">
+        </picture>
       </div>
     </div>
   </div>
