Add section 3. KEPTN-9719

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -69,6 +69,10 @@
     }
   }
 
+  .delivery {
+    background: $white;
+  }
+
   // Kubernetes Cluster
   .kubernetes-cluster {
     counter-reset: step;
