--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -1,10 +1,12 @@
 .teaser-box {
-  z-index: 1000;
+  z-index: 50;
   h1 {
     font-weight: $font-weight-bold !important;
     font-size: $font-size--xl !important;
     font-family: $font-family-base !important;
-    padding-right: 32px;
+    @media screen and (min-width: $bp-md) {
+      padding-right: 32px;
+    }
   }
 
   h2 {
