--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,12 +42,12 @@ page-home
           </a>
         </div>
       </div>
-      <div class="col-12 col-md-4 teaser-box white">
+      <div class="col-12 col-md-4 teaser-box teaser-box--white teaser-box--intro">
         {{ with .Site.GetPage "section" "home/headline" }}
         {{ .Content }}
         {{ end }}
       </div>
-      <div class="col-12 col-md-6 teaser-box white">
+      <div class="col-12 col-md-6 teaser-box teaser-box--white teaser-box--intro">
         {{ with .Site.GetPage "section" "home/intro" }}
           {{ .Content }}
         {{ end }}
@@ -55,7 +55,7 @@ page-home
           <a class="button button--filledGreen mr-4" href="https://github.com/keptn/keptn">
             Start now
           </a>
-          <a class="button filledWhite mr-4" href="https://github.com/keptn/keptn">
+          <a class="button button--filledWhite mr-4" href="https://github.com/keptn/keptn">
             Keptn on Github
             <img class="icon" src="/images/general/icon-github-home.svg" alt="Github">
             <img class="icon icon--hover" src="/images/general/icon-github-hover.svg" alt="Github">
@@ -82,13 +82,13 @@ page-home
         {{ end }}
 
         <div class="d-flex">
-          <a class="button filledGreen mr-3" href="https://github.com/keptn/keptn">
+          <a class="button button--filledGreen mr-3" href="https://github.com/keptn/keptn">
             Start now
           </a>
-          <a class="button outlinedBlue mr-3" href="https://github.com/keptn/keptn">
+          <a class="button button--outlinedBlue mr-3" href="https://github.com/keptn/keptn">
             See it in action
           </a>
-          <a class="button outlinedBlue mr-3" href="https://github.com/keptn/keptn">
+          <a class="button button--outlinedBlue mr-3" href="https://github.com/keptn/keptn">
             Read docs
           </a>
         </div>
@@ -113,7 +113,7 @@ page-home
         {{ end }}
 
         <div class="d-flex">
-          <a class="button filledGreen mr-3" href="https://github.com/keptn/keptn">
+          <a class="button button--filledGreen mr-3" href="https://github.com/keptn/keptn">
             Start now
           </a>
         </div>
@@ -164,7 +164,7 @@ page-home
   <div class="capabilities">
     <div class="container pb-5 pt-3 pt-md-5">
       <div class="row pt-md-3">
-        <div class="col-12 col-md-8 teaser-box white">
+        <div class="col-12 col-md-8 teaser-box teaser-box--white">
           {{ with .Site.GetPage "section" "home/capabilities" }}
           {{ .Content }}
           {{ end }}
