--- a/layouts/index.html
+++ b/layouts/index.html
@@ -130,15 +130,15 @@ page-home
 
 {{/* Remediation */}}
 <div class="remediation">
-  <div class="container pb-4 pt-4 pt-md-5">
-    <div class="row">
-      <div class="col-12 col-md-8 pr-md-5 pt-md-4 teaser-box">
+  <div class="container pb-4 pt-3 pt-md-5">
+    <div class="row d-flex">
+      <div class="col-12 col-md-8 pr-md-5 pt-md-4 teaser-box remediation-graphic">
         <picture>
           <source media="(min-width: 768px)" srcset="/images/home/use-cases/graphic-use-case-03a.svg">
           <img class="" src="/images/home/use-cases/graphic-use-case-03-XS.svg">
         </picture>
       </div>
-      <div class="col-12 col-md-4 teaser-box pl-md-5 remediation-content">
+      <div class="col-12 col-md-4 teaser-box pl-md-5 pb-4 pb-md-0 remediation-content">
         {{ with .Site.GetPage "section" "home/remediation" }}
         {{ .Content }}
         {{ end }}
