Update intro background-size.
KEPTN-9719

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -20,7 +20,7 @@
     }
 
     background: url('/images/home/hero/background-hero-lines.svg'), $primary-home-900;
-    background-size: 100% auto;
+    background-size: contain;
 
     h1 {
       color: $primary;
