Update buttons for mobile.
Buttons now take up 12col on mobile.

KEPTN-9719

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -54,6 +54,7 @@
         background-color: $white;
         color: $primary-home-900 !important;
         font-weight: $font-weight-semibold;
+        text-align: center;
       }
 
       .main-menu ul li a {
