--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,11 +51,11 @@ page-home
         {{ with .Site.GetPage "section" "home/intro" }}
           {{ .Content }}
         {{ end }}
-        <div class="d-flex">
-          <a class="button button--filledGreen mr-4" href="https://github.com/keptn/keptn">
+        <div class="d-block d-md-flex">
+          <a class="d-block button button--filledGreen mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
             Start now
           </a>
-          <a class="button button--filledWhite mr-4" href="https://github.com/keptn/keptn">
+          <a class="d-block button button--filledWhite" href="https://github.com/keptn/keptn">
             Keptn on Github
             <img class="icon" src="/images/general/icon-github-home.svg" alt="Github">
             <img class="icon icon--hover" src="/images/general/icon-github-hover.svg" alt="Github">
@@ -81,14 +81,14 @@ page-home
           {{ .Content }}
         {{ end }}
 
-        <div class="d-flex">
-          <a class="button button--filledGreen mr-3" href="https://github.com/keptn/keptn">
+        <div class="d-block d-md-flex">
+          <a class="button button--filledGreen mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
             Start now
           </a>
-          <a class="button button--outlinedBlue mr-3" href="https://github.com/keptn/keptn">
+          <a class="button button--outlinedBlue mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
             See it in action
           </a>
-          <a class="button button--outlinedBlue mr-3" href="https://github.com/keptn/keptn">
+          <a class="button button--outlinedBlue" href="https://github.com/keptn/keptn">
             Read docs
           </a>
         </div>
@@ -112,8 +112,8 @@ page-home
         {{ .Content }}
         {{ end }}
 
-        <div class="d-flex">
-          <a class="button button--filledGreen mr-3" href="https://github.com/keptn/keptn">
+        <div class="d-block d-md-flex">
+          <a class="button button--filledGreen" href="https://github.com/keptn/keptn">
             Start now
           </a>
         </div>
@@ -142,8 +142,8 @@ page-home
         {{ with .Site.GetPage "section" "home/remediation" }}
         {{ .Content }}
         {{ end }}
-        <div class="d-flex">
-          <a class="button button--filledGreen mr-3" href="https://github.com/keptn/keptn">
+        <div class="d-block d-md-flex">
+          <a class="button button--filledGreen" href="https://github.com/keptn/keptn">
             Start now
           </a>
         </div>
