--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -66,7 +66,9 @@
     border-radius: 24px;
     box-shadow: 0 5px 10px 0 rgba(3, 12, 18, 0.15);
     font-weight: $font-weight-bold;
+    text-align: center;
     text-decoration: none !important;
+    display: block;
 
     &--filledGreen {
       background-color: $secondary-home-900;
