--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -5,7 +5,6 @@
   @include media-breakpoint-up(sm) {
     display: block;
     width: 100px;
-    visibility: hidden;
   }
 
   img {
@@ -17,11 +16,6 @@
     display: block;
     width: 100%;
     height: 100%;
-  }
-
-  &.is-sticky {
-    visibility: visible;
-    padding-bottom: 16px;
   }
 }
 
@@ -46,21 +40,27 @@
   }
 }
 
-.logo-intro  {
-  display: none;
+.page-home {
+  .logo {
+    transition: all 0.3s;
+    display: none;
+    padding-bottom: 16px;
 
-  @media screen and (min-width: $bp-md) {
-    display: block;
-    transition: visibility 0s, opacity 0.3s linear;
-    visibility: visible;
-    opacity: 1;
-    width: 200px;
-    margin-bottom: 80px;
+    @media screen and (max-width: $bp-md) {
+      display: block;
+      width: auto;
+      visibility: visible;
+    }
 
-    &.is-sticky {
-      transition: visibility 0s, opacity 0.3s linear;
+    @media screen and (min-width: $bp-md) {
+      display: block;
       visibility: hidden;
-      opacity: 0;
+      width: auto;
+
+      &.is-sticky {
+        visibility: visible;
+        width: auto;
+      }
     }
 
     img {
@@ -73,6 +73,40 @@
       width: 100%;
       height: 100%;
     }
+  }
 
+  .logo-mobile {
+    display: none;
+  }
+
+  .logo-intro  {
+    display: none;
+
+    @media screen and (min-width: $bp-md) {
+      display: block;
+      transition: visibility 0s, opacity 0.3s linear;
+      visibility: visible;
+      opacity: 1;
+      width: 200px;
+      margin-bottom: 80px;
+
+      &.is-sticky {
+        transition: visibility 0s, opacity 0.3s linear;
+        visibility: hidden;
+        opacity: 0;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+
+    }
   }
 }
