Add teaser-card and capability cards. KEPTN-9719

--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -106,6 +106,7 @@ $font-size--l               : 1.85rem;
 $font-size--xl              : 2rem;
 $font-size--xxl             : 2.5rem;
 //Font Home
+$font-size-s-home           : 0.938rem;
 $font-size-m-home           : 1.35rem;
 $font-size-xxl-home         : 2.313rem;
 
