--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -113,4 +113,70 @@
       font-size: $font-size--s !important;
     }
   }
+
+  .teaser-card {
+    border-radius: 13px;
+    background-color: $white;
+    height: 334px;
+    max-width: 352px;
+    padding: 40px 31px;
+
+    &--blue {
+      background-color: $primary-home-500;
+      box-shadow: 20px 20px 80px 0 rgba(0, 26, 45, 0.3);
+    }
+
+    &--opacity {
+      box-shadow: 20px 20px 80px 0 rgba(2, 63, 107, 0.17);
+    }
+
+    &--marginRight {
+      margin-right: 2px;
+    }
+
+    .teaser-card-picture {
+      height: auto;
+      width: 160px;
+    }
+
+    .teaser-card-content {
+      h3 {
+        font-weight: $font-weight-semibold;
+        font-size: $font-size-m-home !important;
+        margin-top: 25px;
+        margin-bottom: 12px;
+      }
+
+      li, p {
+        font-size: $font-size--s !important;
+        &:last-of-type {
+          margin-bottom: 0 !important;
+        }
+      }
+
+      &--blue {
+        p, h3, h5, li {
+          color: $primary-home-900 !important;
+        }
+      }
+
+      &--courier {
+        font-family: Courier;
+
+        p, h5 {
+          font-size: $font-size-s-home !important;
+          line-height: 24px;
+        }
+
+        p {
+          font-weight: $font-weight-normal;
+        }
+
+        h5 {
+          margin-bottom: 12px;
+          font-weight: $font-weight-bold !important;
+        }
+      }
+    }
+  }
 }
