--- a/layouts/index.html
+++ b/layouts/index.html
@@ -162,12 +162,100 @@ page-home
 
 {{/* Key Capabilities */}}
   <div class="capabilities">
-    <div class="container pb-5 pt-3 pt-md-5">
+    <div class="container teaser-box teaser-box--white pb-5 pt-3 pt-md-5">
       <div class="row pt-md-3">
-        <div class="col-12 col-md-8 teaser-box teaser-box--white">
+        <div class="col-12">
           {{ with .Site.GetPage "section" "home/capabilities" }}
           {{ .Content }}
           {{ end }}
+        </div>
+      </div>
+      <div class="row pt-md-2 pb-md-2">
+          <div class="col-12 col-md-4 pb-4 pb-md-0">
+            <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+              <div class="teaser-card-picture">
+                <picture>
+                  <img src="/images/home/capabilities/capabilities-01.svg">
+                </picture>
+              </div>
+              <div class="teaser-card-content">
+                {{ with .Site.GetPage "section" "home/capabilities-01" }}
+                {{ .Content }}
+                {{ end }}
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 pb-4 pb-md-0">
+            <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+              <div class="teaser-card-picture">
+                <picture>
+                  <img src="/images/home/capabilities/capabilities-02.svg">
+                </picture>
+              </div>
+              <div class="teaser-card-content">
+                {{ with .Site.GetPage "section" "home/capabilities-02" }}
+                {{ .Content }}
+                {{ end }}
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 pb-4 pb-md-0">
+            <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+              <div class="teaser-card-picture">
+                <picture>
+                  <img src="/images/home/capabilities/capabilities-03.svg">
+                </picture>
+              </div>
+              <div class="teaser-card-content">
+                {{ with .Site.GetPage "section" "home/capabilities-03" }}
+                {{ .Content }}
+                {{ end }}
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="row pt-md-4">
+        <div class="col-12 col-md-4 pb-4 pb-md-0">
+          <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+            <div class="teaser-card-picture">
+              <picture>
+                <img src="/images/home/capabilities/capabilities-04.svg">
+              </picture>
+            </div>
+            <div class="teaser-card-content">
+              {{ with .Site.GetPage "section" "home/capabilities-04" }}
+              {{ .Content }}
+              {{ end }}
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 pb-4 pb-md-0">
+          <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+            <div class="teaser-card-picture">
+              <picture>
+                <img src="/images/home/capabilities/capabilities-05.svg">
+              </picture>
+            </div>
+            <div class="teaser-card-content">
+              {{ with .Site.GetPage "section" "home/capabilities-05" }}
+              {{ .Content }}
+              {{ end }}
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="teaser-card teaser-card--marginRight">
+            <div class="teaser-card-content teaser-card-content--blue teaser-card-content--courier">
+                {{ with .Site.GetPage "section" "home/capabilities-06" }}
+                {{ .Content }}
+                {{ end }}
+              <div class="col-12 col-md-8 pr-0 pl-0 pt-4">
+                <a class="button button--filledGreen" href="https://github.com/keptn/keptn">
+                  Explore more
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
