--- a/layouts/index.html
+++ b/layouts/index.html
@@ -171,7 +171,7 @@ page-home
         </div>
       </div>
       <div class="row pt-md-2 pb-md-2">
-          <div class="col-12 col-lg-4 pb-4 pb-lg-0">
+          <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
             <div class="teaser-card teaser-card--blue teaser-card--marginRight">
               <div class="teaser-card-picture">
                 <picture>
@@ -185,7 +185,7 @@ page-home
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4 pb-4 pb-lg-0">
+          <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
             <div class="teaser-card teaser-card--blue teaser-card--marginRight">
               <div class="teaser-card-picture">
                 <picture>
@@ -199,7 +199,7 @@ page-home
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4 pb-4 pb-lg-0">
+          <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
             <div class="teaser-card teaser-card--blue teaser-card--marginRight">
               <div class="teaser-card-picture">
                 <picture>
@@ -215,7 +215,7 @@ page-home
           </div>
       </div>
       <div class="row pt-md-4">
-        <div class="col-12 col-lg-4 pb-4 pb-lg-0">
+        <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
           <div class="teaser-card teaser-card--blue teaser-card--marginRight">
             <div class="teaser-card-picture">
               <picture>
@@ -229,7 +229,7 @@ page-home
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 pb-4 pb-lg-0">
+        <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
           <div class="teaser-card teaser-card--blue teaser-card--marginRight">
             <div class="teaser-card-picture">
               <picture>
@@ -243,7 +243,7 @@ page-home
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-sm-6 col-lg-4">
           <div class="teaser-card teaser-card--marginRight">
             <div class="teaser-card-content teaser-card-content--blue teaser-card-content--courier">
                 {{ with .Site.GetPage "section" "home/capabilities-06" }}
