Remove unnecessary card modifier.
Break at large because it looks horrible otherwise.
KEPTN-9719

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -171,7 +171,7 @@ page-home
       </div>
       <div class="row pt-md-2 pb-md-2">
           <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
-            <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+            <div class="teaser-card teaser-card--blue">
               <div class="teaser-card-picture">
                 <picture>
                   <img src="/images/home/capabilities/capabilities-01.svg">
@@ -185,7 +185,7 @@ page-home
             </div>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
-            <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+            <div class="teaser-card teaser-card--blue">
               <div class="teaser-card-picture">
                 <picture>
                   <img src="/images/home/capabilities/capabilities-02.svg">
@@ -199,7 +199,7 @@ page-home
             </div>
           </div>
           <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
-            <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+            <div class="teaser-card teaser-card--blue">
               <div class="teaser-card-picture">
                 <picture>
                   <img src="/images/home/capabilities/capabilities-03.svg">
@@ -215,7 +215,7 @@ page-home
       </div>
       <div class="row pt-md-4">
         <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
-          <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+          <div class="teaser-card teaser-card--blue">
             <div class="teaser-card-picture">
               <picture>
                 <img src="/images/home/capabilities/capabilities-04.svg">
@@ -229,7 +229,7 @@ page-home
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-4 pb-4 pb-lg-0">
-          <div class="teaser-card teaser-card--blue teaser-card--marginRight">
+          <div class="teaser-card teaser-card--blue">
             <div class="teaser-card-picture">
               <picture>
                 <img src="/images/home/capabilities/capabilities-05.svg">
@@ -243,7 +243,7 @@ page-home
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-4">
-          <div class="teaser-card teaser-card--marginRight">
+          <div class="teaser-card">
             <div class="teaser-card-content teaser-card-content--blue teaser-card-content--courier">
                 {{ with .Site.GetPage "section" "home/capabilities-06" }}
                 {{ .Content }}
