--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -1,13 +1,15 @@
 .teaser-box {
   z-index: 50;
+
   h1 {
     font-weight: $font-weight-bold !important;
     font-size: $font-size--xl !important;
     font-family: $font-family-base !important;
+    padding-bottom: 24px;
+
     @media screen and (min-width: $bp-md) {
       padding-right: 32px;
     }
-    padding-bottom: 24px;
   }
 
   h2 {
@@ -26,7 +28,7 @@
 
   h4 {
     color: $secondary-home-900;
-    font-family: Courier-Bold;
+    font-family: 'Courier-Bold';
     font-size: $font-size--primary;
     font-weight: $font-weight-bold;
     margin-bottom: 8px;
@@ -45,6 +47,8 @@
 
   ul {
     list-style-type: none;
+    margin-bottom: 16px !important;
+
     li {
       padding-left: 32px;
       position: relative;
@@ -59,7 +63,6 @@
         left: 0;
       }
     }
-    margin-bottom: 16px !important;
   }
 
   .button {
@@ -103,7 +106,7 @@
   }
 
   &--white {
-    h1, h2, h3, li,p {
+    h1, h2, h3, li, p {
       color: $white !important;
     }
   }
@@ -111,67 +114,6 @@
   &--intro {
     li, p {
       font-size: $font-size--s !important;
-    }
-  }
-
-  .teaser-card {
-    border-radius: 13px;
-    background-color: $white;
-    min-height: 334px;
-    padding: 40px 31px;
-
-    &--blue {
-      background-color: $primary-home-500;
-      box-shadow: 20px 20px 80px 0 rgba(0, 26, 45, 0.3);
-    }
-
-    &--opacity {
-      box-shadow: 20px 20px 80px 0 rgba(2, 63, 107, 0.17);
-    }
-
-    .teaser-card-picture {
-      height: auto;
-      width: 160px;
-    }
-
-    .teaser-card-content {
-      h3 {
-        font-weight: $font-weight-semibold;
-        font-size: $font-size-m-home !important;
-        margin-top: 25px;
-        margin-bottom: 12px;
-      }
-
-      li, p {
-        font-size: $font-size--s !important;
-        &:last-of-type {
-          margin-bottom: 0 !important;
-        }
-      }
-
-      &--blue {
-        p, h3, h5, li {
-          color: $primary-home-900 !important;
-        }
-      }
-
-      &--courier {
-        font-family: Courier;
-
-        p, h5 {
-          font-size: $font-size-s-home !important;
-          line-height: 24px;
-        }
-
-        p {
-          font-weight: $font-weight-normal;
-        }
-
-        h5 {
-          margin-bottom: 12px;
-          font-weight: $font-weight-bold !important;
-        }
-      }
     }
   }
 }
