--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -44,6 +44,7 @@
 @import 'components/sidebar';
 @import 'components/teaser';
 @import 'components/teaser-box';
+@import 'components/teaser-card';
 @import 'components/toc';
 @import 'components/toolbar';
 
