Add splidejs to the project.
KEPTN-9719

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -181,6 +181,17 @@ page-home
           {{ .Content }}
         {{ end }}
       </div>
+      <div class="col-12">
+        <div class="splide">
+          <div class="splide__track">
+            <ul class="splide__list">
+              <li class="splide__slide">Slide 01</li>
+              <li class="splide__slide">Slide 02</li>
+              <li class="splide__slide">Slide 03</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <div class="row pt-2 pt-md-4 pb-md-2">
         <div class="text col-6 col-md-2 d-flex flex-column justify-content-center">
           <img src="/images/home/logo-avodaq.png">
