Update intro svg breakpoints.
KEPTN-9719

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -31,7 +31,10 @@
         </div>
       </div>
       <div class="col-12 pt-5 teaser-box">
-        <svg width="1136px" height="894px" viewBox="0 0 1136 894" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <picture class="intro-graphic intro-graphic--small">>
+          <img src="/images/home/hero/keptn-logo-white.svg">
+        </picture>
+        <svg class="intro-graphic" viewBox="0 0 1136 894" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <title>graphic-hero</title>
           <defs>
             <rect id="path-1" x="0" y="0" width="1087" height="409" rx="13"></rect>
