--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -119,4 +119,20 @@
       }
     }
   }
+
+  .intro-graphic {
+    display: none;
+
+    @media screen and (min-width: $bp-md) {
+      display: block;
+    }
+
+    &--small {
+      display: none;
+
+      @media screen and (max-width: $bp-md) {
+        display: block;
+      }
+    }
+  }
 }
