--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -25,6 +25,6 @@
     </li>
     
   </ul>
-  <a class="button button-primary" href="/docs/quickstart/">Quick Start</a>
+  <a class="button button--header" href="/docs/quickstart/">Quick Start</a>
 </div>
 {{ end }}
